<resources>
    <string name="app_name">KotlinP</string>
    <string name="name">Lionel</string>
    <string name="bio">Hi, my name is Lionel.\n\nI love fish.\n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.  Fun fact is that I have several aquariums and also a river.\n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.  And sometimes I even go fishing.\n\nAnd even less sometimes, I actually catch something.\n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.   I\'ll be happy to teach you how to make your own aquarium.\n\nYou should ask someone else about fishing, though.\n\n</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">DONE</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to Play:</string>
    <string name="tap_the_screen_and_buttons">Tap the screen and buttons</string>
    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
</resources>
